
  * pg_wrapper: Do not override an already defined PGPORT environment
    variable. Closes: #335692
  * debian/postgresql-common.cron: Check if pg_maintenance is available before
    calling it, to avoid errors when package is removed, but not purged.
    Closes: #333803
  * pg_createcluster: Do not enable SSL on 7.4 clusters since enabling it
    without enabling the TCP socket breaks.

 -- Martin Pitt <mpitt@debian.org>  Wed, 26 Oct 2005 19:53:17 +0100

postgresql-common (28) unstable; urgency=high

  * Urgency high since this version only fixes a very important bug with a
    safe patch.
  * Moved package development to bazaar-ng, updated debian/README.Devel.
  * debian/postgresql-common.postinst: Revert change of version 26: Do create
    the socket directory in the postinst, otherwise clusters will default to
    socket directory /tmp in some cases.

 -- Martin Pitt <mpitt@debian.org>  Thu, 20 Oct 2005 12:56:36 +0200

postgresql-common (27) unstable; urgency=low

  * Changed my debuild alias to explicitly ignore .arch-ids directories (a
    mere -i catched some, but not all arch directories). Closes: #328204
  * Add lintian overrides for missing manpages; manpages are provided by
    postgresql-client-X.Y packages.
  * pg_ctlcluster: Have autovac-* commands error out with a meaningful message
    instead of claiming success if pg_autovacuum is not available.
  * pg_ctlcluster:
    - Increase the timeout for the started postmaster to 30 seconds to cope
      with slow startup. Closes: #320444
    - Immediately fail if the postmaster produced log output and does not run
      any more. This avoids unnecessary timeouts on configuration errors and
      the like.
  * pg_createcluster: Listen on localhost by default only since upstream
    considers listening on all interfaces by default not safe enough.
    Closes: #318820
  * pg_dropcluster: Handle missing data directories gracefully. 
    Closes: #330135
